--- a/SShopping/Shopping/Views/Countries/Index.cshtml
+++ b/SShopping/Shopping/Views/Countries/Index.cshtml
@@ -10,6 +10,7 @@
 <p>
     <a asp-action="Create" class="btn btn-outline-primary">Crear Nuevo</a>
 </p>
+
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
@@ -23,6 +24,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.StatesNumber)
+                            </th>
                             <th></th>
                         </tr>
                     </thead>
@@ -32,6 +36,9 @@
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StatesNumber)
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
