finish CRUD country

--- a/SShopping/Shopping/Views/Countries/DetailsState.cshtml
+++ b/SShopping/Shopping/Views/Countries/DetailsState.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shopping.Data.Entities.Country
+﻿@model Shopping.Data.Entities.State
 
 @{
     ViewData["Title"] = "Details";
@@ -6,15 +6,15 @@
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<h1>Detalle Pais</h1>
+<h1>Detalles Provincia</h1>
 
 <div>
-    <partial name="_CountryDetails"/>
+    <partial name="_StateDetails"/>
 </div>
 <div>
-    <a asp-action="AddState" asp-route-id="@Model?.Id" class= "btn btn-outline-primary">Agregar Provincia</a>  
-    <a asp-action="Edit" asp-route-id="@Model?.Id" class= "btn btn-outline-warning">Editar Pais</a>  
-    <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
+    <a asp-action="AddCity" asp-route-id="@Model?.Id" class= "btn btn-outline-primary">Agregar Ciudad</a>  
+    <a asp-action="EditState" asp-route-id="@Model?.Id" class= "btn btn-outline-warning">Editar Provincia/Estado</a>  
+    <a asp-action="Details" asp-route-id="@Model?.Country.Id" class="btn btn-outline-success">Regresar</a>
 </div> 
 <hr />
 
@@ -23,35 +23,29 @@
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Provincias/Estados</h3>
+                <h3 class="panel-title">Ciudades</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().CitiesNumber)
-                            </th>
+                                @Html.DisplayNameFor(model => model.Cities.FirstOrDefault().Name)
+                            </th>                            
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.States)
+                        @foreach (var item in Model.Cities)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                 <td>
-                                    @Html.DisplayFor(modelItem => item.CitiesNumber)
-                                </td>
+                                </td>                                  
                                 <td>
-                                    <a asp-action="EditState" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
-                                    <a asp-action="DetailsState" asp-route-id="@item.Id" class="btn btn-outline-info">Detalles</a>
-                                    <a asp-action="DeleteState" asp-route-id="@item.Id" class="btn btn-outline-danger">Borrar</a>
+                                    <a asp-action="EditCity" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
+                                    <a asp-action="DetailsCity" asp-route-id="@item.Id" class="btn btn-outline-info">Detalles</a>
+                                    <a asp-action="DeleteCity" asp-route-id="@item.Id" class="btn btn-outline-danger">Borrar</a>
                                 </td>
                             </tr>
                         }
