--- a/SShopping/Shopping/Views/Countries/EditCity.cshtml
+++ b/SShopping/Shopping/Views/Countries/EditCity.cshtml
@@ -1,25 +1,25 @@
-﻿@model Shopping.Data.Entities.Country
-
+﻿@model Shopping.Models.CityViewModel
+ 
 @{
     ViewData["Title"] = "Edit";
 }
 
 <h1>Editar</h1>
 
-<h4>Pais</h4>
+<h4>Ciudad</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Edit">
+        <form asp-action="EditCity">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="States" />
+            <input type="hidden" asp-for="StateId" />
            
-            <partial name="_Country"/>            
-           
+            <partial name="_City"/>
+                       
             <div class="form-group mt-2" >
                 <input type="submit" value="Guardar" class="btn btn-outline-primary" />
-                <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
+                <a asp-action="DetailsState" asp-route-id="@Model.StateId" class="btn btn-outline-success">Regresar</a>
             </div>
         </form>
     </div>
