--- a/SShopping/Shopping/Views/Countries/Index.cshtml
+++ b/SShopping/Shopping/Views/Countries/Index.cshtml
@@ -69,8 +69,8 @@
                 "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
             },
             "aLengthMenu": [
-                [5, 25, 100, 200, -1],
-                [5, 25, 100, 200, "Todos"]
+                [25, 100, 200, -1],
+                [25, 100, 200, "Todos"]
             ]
         });
     });
