--- a/SShopping/Shopping/Views/Countries/_City.cshtml
+++ b/SShopping/Shopping/Views/Countries/_City.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shopping.Models.StateViewModel
+﻿@model Shopping.Models.CityViewModel
   
 <div class="form-group">
     <label asp-for="Name" class="control-label"></label>
