--- a/SShopping/Shopping/Views/Shared/_Layout.cshtml
+++ b/SShopping/Shopping/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Productos</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Usuarios</a>
+                            </li>
                         }
                     </ul>
 
