--- a/SShopping/Shopping/Views/Home/Index.cshtml
+++ b/SShopping/Shopping/Views/Home/Index.cshtml
@@ -1,8 +1,93 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model Shopping.Models.HomeViewModel
+
+@{
+    ViewData["Title"] = "Index";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@if(Model.Quantity > 0)
+{
+    <a asp-action="ShowCart" class="btn btn-outline-primary">Ver Carro de Compras (@Model.Quantity)</a>
+}
+
+@foreach (var item in Model.Products)
+{
+    <div class="row">
+        @if (item.Product1 != null)
+        {
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card_title">@item.Product1.Name</div>
+                    <div class="card_body">
+                        <img src="@item.Product1.ImageFullPath" style="height:150px; max-width:280px;" />
+                        <p class="mt-2">
+                            @item.Product1.Description
+                            <h4>@Html.DisplayFor(modelItem => item.Product1.Price)</h4>
+                        </p>
+                    </div>
+                    <div class="card_foot">
+                        <a asp-action="Details" asp-route-id="@item.Product1.Id" class="btn btn-secondary">Detalles</a>
+                        <a asp-action="Add" asp-route-id="@item.Product1.Id" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+        }
+        @if (item.Product2 != null)
+        {
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card_title">@item.Product2.Name</div>
+                    <div class="card_body">
+                        <img src="@item.Product2.ImageFullPath" style="height:150px; max-width:280px;" />
+                        <p class="mt-2">
+                            @item.Product2.Description
+                            <h4>@Html.DisplayFor(modelItem => item.Product2.Price)</h4>
+                        </p>
+                    </div>
+                    <div class="card_foot">
+                        <a asp-action="Details" asp-route-id="@item.Product1.Id" class="btn btn-secondary">Detalles</a>
+                        <a asp-action="Add" asp-route-id="@item.Product1.Id" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+        }
+        @if (item.Product3 != null)
+        {
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card_title">@item.Product3.Name</div>
+                    <div class="card_body">
+                        <img src="@item.Product3.ImageFullPath" style="height:150px; max-width:280px;" />
+                        <p class="mt-2">
+                            @item.Product3.Description
+                            <h4>@Html.DisplayFor(modelItem => item.Product3.Price)</h4>
+                        </p>
+                    </div>
+                    <div class="card_foot">
+                        <a asp-action="Details" asp-route-id="@item.Product1.Id" class="btn btn-secondary">Detalles</a>
+                        <a asp-action="Add" asp-route-id="@item.Product1.Id" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+        }
+        @if (item.Product4 != null)
+        {
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card_title">@item.Product4.Name</div>
+                    <div class="card_body">
+                        <img src="@item.Product4.ImageFullPath" style="height:150px; max-width:280px;" />
+                        <p class="mt-2">
+                            @item.Product4.Description
+                            <h4>@Html.DisplayFor(modelItem => item.Product4.Price)</h4>
+                        </p>
+                    </div>
+                    <div class="card_foot">
+                        <a asp-action="Details" asp-route-id="@item.Product1.Id" class="btn btn-secondary">Detalles</a>
+                        <a asp-action="Add" asp-route-id="@item.Product1.Id" class="btn btn-primary">Agregar</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
+
