Toast message begin

--- a/SShopping/Shopping/Views/Home/OrderSuccess.cshtml
+++ b/SShopping/Shopping/Views/Home/OrderSuccess.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Order Success";
 }
+<flash dismissable="true" />
 
 <div class="row">
     <div class="col-md-4 offset-4">
