--- a/SShopping/Shopping/Views/Countries/Index.cshtml
+++ b/SShopping/Shopping/Views/Countries/Index.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewData["Title"] = "Index";
 }
+<flash dismissable="true" />
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-
 
 <p>
     <a asp-action="Create" class="btn btn-outline-primary">Crear Nuevo</a>
