--- a/SShopping/Shopping/Views/Shared/_Layout.cshtml
+++ b/SShopping/Shopping/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Shopping - <a asp-area="" asp-controller="Home" asp-action="Privacy">oliticas de Privacidad</a>
+            &copy; 2022 - Shopping - <a asp-area="" asp-controller="Home" asp-action="Privacy">Politicas de Privacidad</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
