--- a/SShopping/Shopping/Views/Categories/_ViewAll.cshtml
+++ b/SShopping/Shopping/Views/Categories/_ViewAll.cshtml
@@ -15,7 +15,7 @@
             </th>
 
             <th>
-                <a onclick="showInPopup('@Url.Action("AddOrEdit", "Categories", new { id = 0 }, Context.Request.Scheme)' , 'Nueva Categoría')" class="btn btn-sm btn-primary text-white"><i class="fa fa-plus-circle"></i> Categoría</a>
+                <a onclick="showInPopup('@Url.Action("AddOrEdit", "Categories", new { id = 0 }, Context.Request.Scheme)', 'Nueva Categoría')" class="btn btn-sm btn-primary text-white"><i class="fa fa-plus-circle"></i> Categoría</a>
             </th>
         </tr>
     </thead>
@@ -24,7 +24,7 @@
         {
         <tr>
             <td>
-                <a asp-action="Details" asp-controller="Categories" asp-route-Id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductsNumber)
