--- a/SShopping/Shopping/Views/Countries/EditState.cshtml
+++ b/SShopping/Shopping/Views/Countries/EditState.cshtml
@@ -1,32 +1,28 @@
 ﻿@model Shopping.Models.StateViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Estado / Departamento";
+    Layout = null;
 }
+
 <flash dismissable="true" />
 
-<h1>Editar</h1>
-
-<h4>Provincia/estado</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="EditState">
+<div class="container smfont">
+    <form asp-action="EditState" autocomplete="off" asp-route-id="@Model.Id" onsubmit="return jQueryAjaxPost(this);">
+        <div class="box-body">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="CountryId" />
-           
             <partial name="_State"/>
-                       
-            <div class="form-group mt-2" >
-                <input type="submit" value="Guardar" class="btn btn-outline-primary" />
-                <a asp-action="Details" asp-route-id="@Model.CountryId" class="btn btn-outline-success">Regresar</a>
-            </div>
-        </form>
-    </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-primary" data-bs-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</button>
+            <button type="submit" class="btn btn-sm btn-success"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+    </form>
 </div>
-
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
