--- a/SShopping/Shopping/Views/Products/Index.cshtml
+++ b/SShopping/Shopping/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Shooping.Data.Entities.Product>
+﻿@model IEnumerable<Shopping.Data.Entities.Product>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,27 +14,13 @@
         </div>
         <div class="card-body">
             <div id="view-all">
-                @await Html.PartialAsync("_ViewAll", Model)
+                @await Html.PartialAsync("_ViewAllProducts", Model)
             </div>
         </div>
     </div>
 </div>
 
-<!--modal placeholder. Also you can place this modal form in the _Layout.cshtml-->
-<div class="modal fade in" tabindex="-1" role="dialog" data-bs-backdrop="static" id="form-modal">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header bg-primary">
-                <h5 class="modal-title text-white"></h5>
-                <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close">                   
-                </button>
-            </div>
-            <div class="modal-body">
-            </div>
-        </div>
-    </div>
-</div>
-
+<partial name="_AddOrEditDialog" />
 <partial name="_DeleteDialog" />
 
 @section Scripts {
